--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <script>
         // Contraseña establecida
-        const CLAVE_CORRECTA = "06/12/2021";
+        const CLAVE_CORRECTA = "feliznavidad2024";
 
         function verificarClave() {
             const passwordInput = document.getElementById("password").value;
@@ -26,7 +26,7 @@
 
             if (passwordInput === CLAVE_CORRECTA) {
                 // Redirigir a otra página
-                window.location.href = "ANIVERSARIO.html";
+                window.location.href = "Navidad.html";
             } else {
                 // Mostrar mensaje de error
                 mensaje.style.display = "block";
