--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             if (passwordInput === CLAVE_CORRECTA) {
                 // Redirigir a otra página
-                window.location.href = "Navidad.html";
+                window.location.href = "NAVIDAD.html";
             } else {
                 // Mostrar mensaje de error
                 mensaje.style.display = "block";
